# gmail-mcp

./: .gitignore  CLAUDE.md  PROJECT_PLAN.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/gmail_mcp/: __init__.py  auth.py  gmail_client.py  server.py
src/gmail_mcp/tools/: __init__.py  bulk.py  filters.py  messages.py
tests/: test_batch_retry.py
