[project]
name = "gmail-mcp"
version = "0.1.0"
description = "Local Gmail MCP server. Raw JSON-RPC 2.0 over stdio."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-auth>=2.38",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.166",
    "pydantic>=2.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
